[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scopehound"
version = "0.1.0"
description = "Scope-aware recon automation for authorized web penetration testing engagements."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OctagonIntel" }]
keywords = ["recon", "pentest", "security", "osint", "subdomain", "nmap"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Environment :: Console",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "PyYAML>=6.0",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/OctagonIntel/scopehound"
Issues = "https://github.com/OctagonIntel/scopehound/issues"

[project.scripts]
scopehound = "scopehound.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer's API intentionally uses function calls (typer.Option/Argument) as
# argument defaults; B008 flags this but it is the documented, correct pattern.
"src/scopehound/cli.py" = ["B008"]
